--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <title>Socket.io</title>
+        <script src="/socket.io/socket.io.js"></script>
+        <script>
+            const socket = io.connect();
+        </script>
     </head>
     <body>
         <h1>KhoaPham Training</h1>
