--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,6 +8,7 @@
             socket.on('SERVER_SEND_A_MESSAGE', data => {
                 console.log(data);
             });
+            setInterval(() => socket.emit('CLIENT_SEND_A_MESSAGE', 'XIN CHAO SERVER'), 2000);
         </script>
     </head>
     <body>
