--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,15 +3,26 @@
     <head>
         <title>Socket.io</title>
         <script src="/socket.io/socket.io.js"></script>
+        <script src="jquery-3.2.0.min.js"></script>
         <script>
             const socket = io.connect();
-            socket.on('SERVER_SEND_A_MESSAGE', data => {
-                console.log(data);
+
+            // setInterval(() => socket.emit('CLIENT_SEND_A_MESSAGE', 'XIN CHAO SERVER'), 2000);
+            
+            socket.on('SERVER_SEND_MESSAGE', msg => console.log(msg));
+
+            $(document).ready(() => {
+                $('#btn').click(() => {
+                    const msg = $('#txt').val();
+                    $('#txt').val('');
+                    socket.emit('CLIENT_SEND_A_MESSAGE', msg);
+                });
             });
-            setInterval(() => socket.emit('CLIENT_SEND_A_MESSAGE', 'XIN CHAO SERVER'), 2000);
         </script>
     </head>
     <body>
         <h1>KhoaPham Training</h1>
+        <input type="text" id="txt" placeholder="Enter you message">
+        <button id="btn">Click me</button>
     </body>
 </html>
