--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -7,9 +7,9 @@
         <script>
             const socket = io.connect();
             $(document).ready(() => {
-                socket.on('XAC_NHAN_DANG_KY', isOk => {
-                    if(isOk) return alert('DANG KY THANH CONG');
-                    alert('DANG KY THAT BAI`');
+                socket.on('XAC_NHAN_DANG_KY', arrUsername => {
+                    if(!arrUsername) return alert('DANG_KY_THAT_BAI');
+                    arrUsername.forEach(username => $('#ulUsername').append(`<li>${username}</li>`));
                 });
 
                 socket.on('NEW_USER_CONNECTED', username => {
