--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -27,8 +27,15 @@
     </head>
     <body>
         <h1>KhoaPham Training</h1>
-        <input type="text" id="txtUsername" placeholder="Enter you message">
+        <input type="text" id="txtUsername" placeholder="Enter you username">
         <button id="btnSignUp">Sign Up</button>
+        <hr />
+        <input type="text" id="txtDest" placeholder="Enter you friend username">
+        <br /><br />
+        <input type="text" id="txtMessage" placeholder="Enter you message">
+        <br /><br />
+        <button id="btnSend">SEND</button>
+        <hr />
         <ul id="ulUsername">
             <li>khoapham</li>
         </ul>
