--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -15,6 +15,8 @@
                     });
 
                     socket.on('GOT_NEW_MESSAGE', msg => console.log(msg));
+
+                    socket.on('USER_DISCONNECTED', username => console.log(username));
                 });
 
 
